--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.0",
+    "moment": "^2.27.0",
+    "node-sass": "^4.14.1",
+    "randomstring": "^1.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.0.7",
+    "react-icons": "^3.10.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -30,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   }
 }
